prevent zooming in when double tapping on mobile

--- a/src/input.css
+++ b/src/input.css
@@ -21,6 +21,9 @@
         padding: 0;
         margin: 0;
         /* overflow: hidden; */
+        touch-action: manipulation;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
     }
 
     .centralise {
@@ -120,7 +123,9 @@
 
     #interface {
         width: 100vw;
-        height: calc(100vh - var(--header-height))
+        height: calc(100vh - var(--header-height));
+        touch-action: manipulation;
+        -webkit-tap-highlight-color: transparent;
     }
 
     #screen {
